# Jetson-Copilot

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml  sampleRequest.json  sampleRequest2.json
src/api/: api.py
src/jetson_copilot/: api.py  config.py  llm_handler.py  main.py  models.py  schemas.py
src/jetson_copilot/api/: api.py
src/jetson_copilot/auto_complete/: router.py  schemas.py  service.py
src/jetson_copilot/data_models/: models.py
src/jetson_copilot/llm/: dependencies.py  llm_engine.py  schemas.py
src/jetson_copilot_backend/: api.py  completion_service.py  main.py  model_handler.py
src/jetson_project/: api.py  completion_service.py  main.py  model_handler.py
