[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetson-copilot"
version = "0.1.0"
description = "Python backend for Jetson Orin Nano code completion with RAG support"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "llama-cpp-python",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "requests",
    "transformers",
    "accelerate"
]

[project.scripts]
start = "jetson_copilot.api:start"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jetson_copilot"]

[tool.poetry]
name = "jetson-copilot"
version = "0.1.0"
description = "Python backend for Jetson Orin Nano code completion with RAG support"
authors = []
license = "GPLv3" 
readme = "README.md"

packages = [
    { include = "jetson_copilot", from = "src" },
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
typeCheckingMode = "basic"

